syntax = "proto3";
import "ProtoUtil.proto";
import "ItemService.proto";
import "LocationService.proto";
import "InventoryService.proto";

option java_package = "protos";
option csharp_namespace = "myGrpc";

package Protos;

message gOrder{
  int32 Id = 1;
  int32 OrderNumber = 2;
  repeated gOrderEntry orderEntries = 3;
  gLocation location = 4;
}

message gOrderEntry {
  int32 Id = 1;
  int32 OrderId = 2;
  int32 Amount = 3;
  bool IsPicked = 4;
  gItem Item = 5;
}


message gOrderList{
  repeated gOrder orders = 1;
}

message gOrderId{
  int32 orderId = 1;
}

message gOrderProcess{
  gOrder order = 1;
  gInventoryList pickInventories = 2;
}


service OrderService {
  rpc RegisterOrder(gOrder) returns (gOrder);
  rpc GetOrder(gOrderId) returns (gOrder);
  rpc GetAllOrders(gOrder) returns (gOrderList);
  rpc UpdateOrder(gOrder) returns (gOrder);
  rpc RemoveOrder(gOrderId) returns (gBoolValue);
  rpc ProcessOrder(gOrderProcess) returns (gBoolValue);
}